[package]
name = "speckdrumm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
itertools = "0.10.3"
js-sys = "0.3.57"
rustdct = "0.7.0"
wasm-bindgen = "0.2.80"

[dependencies.web-sys]
version = "0.3.57"
features = ["AudioContext", "MediaStream", "MediaDevices", "Window", "Navigator", "console", "MediaStreamConstraints", "MediaStreamAudioSourceNode", "ScriptProcessorNode", "AudioBuffer", "HtmlCanvasElement", "CanvasRenderingContext2d", "Document", "AudioProcessingEvent", "ImageData"]

[dev-dependencies]
wasm-bindgen-test = "0.2"

[profile.release]
lto = "fat"
strip = "debuginfo"
